fix: added white-space: nowrap to the button as well to see if that prevents the word wrap

--- a/app/scss/_text.scss
+++ b/app/scss/_text.scss
@@ -33,6 +33,7 @@
     font-size: rem(14px);
     font-weight: 400;
     line-height: 2;
+    white-space: nowrap;
 
     // added this width below last minute as the text was wrapping into a new line on FEM
     @include breakpoint-up(medium) {
